Fix pretained cnn

--- a/src/neural_transfer.ipynb
+++ b/src/neural_transfer.ipynb
@@ -316,6 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#cnn = models.vgg19(pretrained=True).features.to(device).eval()\n",
     "cnn = models.vgg19(weights=models.VGG19_Weights.IMAGENET1K_V1).features.to(device).eval()"
    ]
   },
